you tube links added

--- a/bootstrap/content copy.html
+++ b/bootstrap/content copy.html
@@ -262,7 +262,39 @@
                         <div class="c-content-title-1">
                             <h3 class="c-center c-font-uppercase c-font-bold"> About 365 Online</h3>
 							 <p class="c-font-uppercase c-font-sbold text-center">365 Online is the leading IT training and consultancy provider in the field of customer experience that focuses on quality, innovation, & speed. We utiliz technology to bring results and  pride ourselves in great work ethic and end-results. Our trainers and consultants are certified and highly experienced in their technology domain.</p>
+							 
+							 <p class="c-font-uppercase c-font-sbold text-center">365 Online also aims at being the Project Consultancy contractor of choice by supporting its customers’ business objectives and consistently delivering projects with outstanding safety and environmental performance that meet cost, schedule and quality targets.</p>
                             <div class="c-line-center"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 wow animate slideInUp">
+                                <div class="c-media"><br/>
+                                    <img src="assets/parallex1.png" alt="About 365 Online" /> </div>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="c-body">
+                                    <ul class="c-row">
+                                        <li class="wow animate fadeInUp">
+                                            <h4>Oracle WebCenter Sites</h4>
+											<p>Enables marketers and business users to easily create and manage contextually relevant, social, and interactive online experiences across multiple channels on a global scale.</p>
+                                        </li>
+                                        <li class="wow animate fadeInUp">
+                                            <h4>Oracle WebCebcenter Portal</h4>
+											<p>A web platform for creating intranets, extranets, composite applications, and self-service portals.It provides users a more secure and efficient means to consume information.</p>
+                                        </li>
+                                    </ul>
+									<ul class="c-row">
+                                        <li class="wow animate fadeInUp">
+                                            <h4>Oracle WebCenter Content</h4>
+											<p>provides a unified repository to house unstructured content, enabling organizations to deliver it to business users in the proper format and within the context of applications</p>
+                                        </li>
+                                        <li class="wow animate fadeInUp">
+                                            <h4>Oracle WebCenter Imaging</h4>
+											<p>Provides complete management of document images within transactional business processes, including content management and business process management.</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
