--- a/bootstrap/oracle-webcenter-content-training.html
+++ b/bootstrap/oracle-webcenter-content-training.html
@@ -354,6 +354,71 @@
 </li>
                             </ul>
                         </div>
+						<div class="col-sm-12 wow animated fadeInLeft">
+                            <!-- Begin: Title 1 component -->
+                            <div class="c-content-title-1"></br>
+                                <h3 class="c-font-uppercase c-font-bold">Oracle WebCenter Content Demo</h3>
+                                <div class="c-line-left c-theme-bg"></div>
+                            </div>
+                            <!-- End-->
+                         <div style="overflow: hidden; height: 270px; width: 740px; max-width: 100%; max-height: 100%;">
+<div id="youtube_canvas" style="height: 100%; width: 100%; max-width: 100%;"><iframe style="height: 100%; width: 100%; max-width: 100%; border: 0;" src="https://www.youtube.com/embed/76NjJd1hfnE?hl=en&amp;autoplay=0&amp;cc_load_policy=1&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1" width="300" height="150" frameborder="0"></iframe></div>
+<a id="get-youtube-data" class="youtube-embed-code" href="https://www.tubeembed.com">tubeembed</a>
+
+</div>   
+                        </div>
+												<div class="col-sm-12 wow animated fadeInLeft">
+                            <!-- Begin: Title 1 component -->
+                            <div class="c-content-title-1"></br>
+                                <h3 class="c-font-uppercase c-font-bold">Desktop Integration</h3>
+                                <div class="c-line-left c-theme-bg"></div>
+                            </div>
+                            <!-- End-->
+                            <div style="overflow: hidden; height: 270px; width: 740px; max-width: 100%; max-height: 100%;">
+<div id="youtube_canvas" style="height: 100%; width: 100%; max-width: 100%;"><iframe style="height: 100%; width: 100%; max-width: 100%; border: 0;" src="https://www.youtube.com/embed/AXi4q9VWMqw?hl=en&amp;autoplay=0&amp;cc_load_policy=1&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1" width="300" height="150" frameborder="0"></iframe></div>
+<a id="get-youtube-data" class="youtube-embed-code" href="https://www.tubeembed.com">tubeembed</a>
+
+</div>
+                        </div>
+												<div class="col-sm-12 wow animated fadeInLeft">
+                            <!-- Begin: Title 1 component -->
+                            <div class="c-content-title-1"></br>
+                                <h3 class="c-font-uppercase c-font-bold">Content Type Creation</h3>
+                                <div class="c-line-left c-theme-bg"></div>
+                            </div>
+                            <!-- End-->
+                            <div style="overflow: hidden; height: 270px; width: 740px; max-width: 100%; max-height: 100%;">
+<div id="youtube_canvas" style="height: 100%; width: 100%; max-width: 100%;"><iframe style="height: 100%; width: 100%; max-width: 100%; border: 0;" src="https://www.youtube.com/embed/ztp1BPHzDlQ?hl=en&amp;autoplay=0&amp;cc_load_policy=1&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1" width="300" height="150" frameborder="0"></iframe></div>
+<a id="get-youtube-data" class="youtube-embed-code" href="https://www.tubeembed.com">tubeembed</a>
+
+</div>
+                        </div>
+												<div class="col-sm-12 wow animated fadeInLeft">
+                            <!-- Begin: Title 1 component -->
+                            <div class="c-content-title-1"></br>
+                                <h3 class="c-font-uppercase c-font-bold">User Creation</h3>
+                                <div class="c-line-left c-theme-bg"></div>
+                            </div>
+                            <!-- End-->
+                            <div style="overflow: hidden; height: 270px; width: 740px; max-width: 100%; max-height: 100%;">
+<div id="youtube_canvas" style="height: 100%; width: 100%; max-width: 100%;"><iframe style="height: 100%; width: 100%; max-width: 100%; border: 0;" src="https://www.youtube.com/embed/YwkY1RgXnTU?hl=en&amp;autoplay=0&amp;cc_load_policy=1&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1" width="300" height="150" frameborder="0"></iframe></div>
+<a id="get-youtube-data" class="youtube-embed-code" href="https://www.tubeembed.com">tubeembed</a>
+
+</div>
+                        </div>
+												<div class="col-sm-12 wow animated fadeInLeft">
+                            <!-- Begin: Title 1 component -->
+                            <div class="c-content-title-1"></br>
+                                <h3 class="c-font-uppercase c-font-bold">Localization</h3>
+                                <div class="c-line-left c-theme-bg"></div>
+                            </div>
+                            <!-- End-->
+                            <div style="overflow: hidden; height: 270px; width: 740px; max-width: 100%; max-height: 100%;">
+<div id="youtube_canvas" style="height: 100%; width: 100%; max-width: 100%;"><iframe style="height: 100%; width: 100%; max-width: 100%; border: 0;" src="https://www.youtube.com/embed/hAjbvDTNzOw?hl=en&amp;autoplay=0&amp;cc_load_policy=1&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1" width="300" height="150" frameborder="0"></iframe></div>
+<a id="get-youtube-data" class="youtube-embed-code" href="https://www.tubeembed.com">tubeembed</a>
+
+</div>
+                        </div>
                     </div>
                 </div>
             </div>
