--- a/bootstrap/oracle-webcenter-sites-12c-online-training.html
+++ b/bootstrap/oracle-webcenter-sites-12c-online-training.html
@@ -428,6 +428,58 @@ Min. 8 GB RAM
 </li>
                             </ul>
                         </div>
+						<div class="col-sm-12 wow animated fadeInLeft">
+                            <!-- Begin: Title 1 component -->
+                            <div class="c-content-title-1"></br>
+                                <h3 class="c-font-uppercase c-font-bold">How in engage in Oracle WebCenter Sites Training</h3>
+                                <div class="c-line-left c-theme-bg"></div>
+                            </div>
+                            <!-- End-->
+                           <div style="overflow: hidden; height: 270px; width: 740px; max-width: 100%; max-height: 100%;">
+<div id="youtube_canvas" style="height: 100%; width: 100%; max-width: 100%;"><iframe style="height: 100%; width: 100%; max-width: 100%; border: 0;" src="https://www.youtube.com/embed/xjZ_5071T3U?hl=en&amp;autoplay=0&amp;cc_load_policy=1&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1" width="300" height="150" frameborder="0"></iframe></div>
+<a id="get-youtube-data" class="youtube-embed-code" href="https://www.tubeembed.com">tubeembed</a>
+
+</div>
+                        </div>
+						<div class="col-sm-12 wow animated fadeInLeft">
+                            <!-- Begin: Title 1 component -->
+                            <div class="c-content-title-1"></br>
+                                <h3 class="c-font-uppercase c-font-bold">Users, Roles and ACL Tutorial</h3>
+                                <div class="c-line-left c-theme-bg"></div>
+                            </div>
+                            <!-- End-->
+                           <div style="overflow: hidden; height: 270px; width: 740px; max-width: 100%; max-height: 100%;">
+<div id="youtube_canvas" style="height: 100%; width: 100%; max-width: 100%;"><iframe style="height: 100%; width: 100%; max-width: 100%; border: 0;" src="https://www.youtube.com/embed/Vn2UaHZAagE?hl=en&amp;autoplay=0&amp;cc_load_policy=1&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1" width="300" height="150" frameborder="0"></iframe></div>
+<a id="get-youtube-data" class="youtube-embed-code" href="https://www.tubeembed.com">tubeembed</a>
+
+</div>
+                        </div>
+						<div class="col-sm-12 wow animated fadeInLeft">
+                            <!-- Begin: Title 1 component -->
+                            <div class="c-content-title-1"></br>
+                                <h3 class="c-font-uppercase c-font-bold">Basic Asset Types Tutorial</h3>
+                                <div class="c-line-left c-theme-bg"></div>
+                            </div>
+                            <!-- End-->
+                           <div style="overflow: hidden; height: 270px; width: 740px; max-width: 100%; max-height: 100%;">
+<div id="youtube_canvas" style="height: 100%; width: 100%; max-width: 100%;"><iframe style="height: 100%; width: 100%; max-width: 100%; border: 0;" src="https://www.youtube.com/embed/SDlB-JvtOTI?hl=en&amp;autoplay=0&amp;cc_load_policy=1&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1" width="300" height="150" frameborder="0"></iframe></div>
+<a id="get-youtube-data" class="youtube-embed-code" href="https://www.tubeembed.com">tubeembed</a>
+
+</div>
+                        </div>
+						<div class="col-sm-12 wow animated fadeInLeft">
+                            <!-- Begin: Title 1 component -->
+                            <div class="c-content-title-1"></br>
+                                <h3 class="c-font-uppercase c-font-bold">How to resolve Webcenter sites 12C eclipse plugin not getting visible in eclipse issue</h3>
+                                <div class="c-line-left c-theme-bg"></div>
+                            </div>
+                            <!-- End-->
+                           <div style="overflow: hidden; height: 270px; width: 740px; max-width: 100%; max-height: 100%;">
+<div id="youtube_canvas" style="height: 100%; width: 100%; max-width: 100%;"><iframe style="height: 100%; width: 100%; max-width: 100%; border: 0;" src="https://www.youtube.com/embed/8P4Q_idFu9E?hl=en&amp;autoplay=0&amp;cc_load_policy=1&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1" width="300" height="150" frameborder="0"></iframe></div>
+<a id="get-youtube-data" class="youtube-embed-code" href="https://www.tubeembed.com">tubeembed</a>
+
+</div>
+                        </div>
                     </div>
                 </div>
             </div>
