navigation linked, about us added

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
         <meta charset="utf-8" />
-        <title>365 Online Training | Home</title>
+        <title>365 Online | Home</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -53,7 +53,12 @@
                         <nav class="c-mega-menu c-pull-right c-mega-menu-dark c-mega-menu-dark-mobile c-fonts-uppercase c-fonts-bold">
                             <ul class="nav navbar-nav c-theme-nav">
                                 <li class="c-active">
-                                    <a href="#" class="c-link dropdown-toggle">Home
+                                    <a href="http://beta.365onlinetraining.com/" class="c-link dropdown-toggle">Home
+                                        <span class="c-arrow c-toggler"></span>
+                                    </a>
+                                </li>
+								<li class="c-menu-type-classic">
+                                    <a href="http://beta.365onlinetraining.com/about-us/" class="c-link dropdown-toggle">About Us
                                         <span class="c-arrow c-toggler"></span>
                                     </a>
                                 </li>
@@ -63,37 +68,32 @@
                                     </a>
                                     <ul class="dropdown-menu c-menu-type-classic c-pull-left">
                                         <li class="dropdown-submenu">
-                                            <a href="#">Oracle WebCentre Sites
+                                            <a href="http://beta.365onlinetraining.com/oracle-webcenter-sites-12c-online-training/">Oracle WebCentre Sites
                                                 <span class="c-arrow c-toggler"></span>
                                             </a>
                                         </li>
                                         <li class="dropdown-submenu">
-                                            <a href="#">Oracle Webcenter Content
+                                            <a href="http://beta.365onlinetraining.com/oracle-webcenter-content-training/">Oracle Webcenter Content
                                                 <span class="c-arrow c-toggler"></span>
                                             </a>
                                         </li>
 										<li class="dropdown-submenu">
-                                            <a href="#">Oracle Webcenter Portal
+                                            <a href="http://beta.365onlinetraining.com/oracle-mobile-application-framework-training-maf/">Oracle MAF
                                                 <span class="c-arrow c-toggler"></span>
                                             </a>
                                         </li>
 										<li class="dropdown-submenu">
-                                            <a href="#">Oracle MAF
+                                            <a href="http://beta.365onlinetraining.com/oracle-atg-training/">Oracle ATG Web Commerce
                                                 <span class="c-arrow c-toggler"></span>
                                             </a>
                                         </li>
 										<li class="dropdown-submenu">
-                                            <a href="#">Oracle ATG Web Commerce
+                                            <a href="http://beta.365onlinetraining.com/angular-js-online-course">Angular JS
                                                 <span class="c-arrow c-toggler"></span>
                                             </a>
                                         </li>
 										<li class="dropdown-submenu">
-                                            <a href="#">Angular JS
-                                                <span class="c-arrow c-toggler"></span>
-                                            </a>
-                                        </li>
-										<li class="dropdown-submenu">
-                                            <a href="#">Oracle ADF
+                                            <a href="http://beta.365onlinetraining.com/oracle-adf-online-training/">Oracle ADF
                                                 <span class="c-arrow c-toggler"></span>
                                             </a>
                                         </li>
@@ -150,8 +150,6 @@
                                 </li>
                                     </ul>
                                     <!-- END: MOBILE VERSION OF THE TAB MEGA MENU -->
-                                </li>
-                            </ul>
                         </nav>
                         <!-- END: MEGA MENU -->
                         <!-- END: LAYOUT/HEADERS/MEGA-MENU -->
@@ -260,7 +258,7 @@
                 <div class="container">
                     <div class="c-content-product-1 c-opt-1">
                         <div class="c-content-title-1">
-                            <h3 class="c-center c-font-uppercase c-font-bold"> About 365 Online</h3>
+                            <h3 class="c-center c-font-uppercase c-font-bold"> About Us</h3>
 							 <p class="c-font-uppercase c-font-sbold text-center">365 Online is the leading IT training and consultancy provider in the field of customer experience that focuses on quality, innovation, & speed. We utiliz technology to bring results and  pride ourselves in great work ethic and end-results. Our trainers and consultants are certified and highly experienced in their technology domain.</p>
                             <div class="c-line-center"></div>
                         </div>
@@ -309,7 +307,8 @@ var dat =  new Date();
 var dt=dat.addDays(2);
 document.write(dt.toDateString());
 
-</script> 
+</script> </br></br>
+<a href="#" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">View Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -341,39 +340,8 @@ var dat =  new Date();
 var dt=dat.addDays(2);
 document.write(dt.toDateString());
 
-</script>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="c-content-blog-post-card-1 c-option-2">
-                                    <div class="c-media c-content-overlay">
-                                        <div class="c-overlay-wrapper">
-                                            <div class="c-overlay-content">
-                                                <a href="#">
-                                                    <i class="icon-link"></i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <img class="c-overlay-object img-responsive" src="assets/course/shot01.jpg" alt="Oracle WebCenter Portal"> </div>
-                                    <div class="c-body">
-                                        <div class="c-title c-font-uppercase c-font-bold">
-                                            <a href="#">Oracle WebCenter Portal</a>
-                                        </div>
-                                        <script type="text/javascript">
-Date.prototype.addDays = function(days)
-{
-    var dat = new Date(this.valueOf());
-    dat.setDate(dat.getDate() + days);
-    return dat;
-}
-
-var dat =  new Date();
-
-var dt=dat.addDays(3);
-document.write(dt.toDateString());
-
-</script>
+</script> </br></br>
+<a href="#" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">View Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -405,7 +373,8 @@ var dat =  new Date();
 var dt=dat.addDays(3);
 document.write(dt.toDateString());
 
-</script> 
+</script>  </br></br>
+<a href="#" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">View Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -437,7 +406,8 @@ var dat =  new Date();
 var dt=dat.addDays(4);
 document.write(dt.toDateString());
 
-</script>
+</script> </br></br>
+<a href="#" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">View Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -469,7 +439,8 @@ var dat =  new Date();
 var dt=dat.addDays(4);
 document.write(dt.toDateString());
 
-</script>
+</script> </br></br>
+<a href="#" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">View Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -501,7 +472,8 @@ var dat =  new Date();
 var dt=dat.addDays(5);
 document.write(dt.toDateString());
 
-</script>
+</script> </br></br>
+<a href="#" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">View Details</a>
                                     </div>
                                 </div>
                             </div>
